<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/header_view"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="night_mode"
            app:title="@string/title_dark_mode"
            app:defaultValue="true"/>

        <com.example.apod.ui.color.ColorPreference
            app:iconSpaceReserved="false"
            app:defaultValue="blue"
            app:entries="@array/color_entries"
            app:entryValues="@array/color_values"
            app:key="color"
            app:title="@string/color_title"
            app:useSimpleSummaryProvider="true" />

        <com.example.apod.ui.font.FontPreference
            app:defaultValue="montserrat"
            app:entries="@array/font_entries"
            app:entryValues="@array/font_values"
            app:key="@string/font_key"
            app:title="@string/font_title"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>