<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.journaldev.collapsingtoolbarlayout.ScrollingActivity">
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_share"/>

    <item
        android:id="@+id/action_download"
        android:title="@string/action_download"
        app:showAsAction="never"
        android:icon="@drawable/ic_download"/>

    <item
        android:id="@+id/action_wallpaper"
        android:title="@string/action_wallpaper"
        app:showAsAction="never"
        android:icon="@drawable/ic_wallpaper"/>
</menu>