<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/picture_of_the_day"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_double"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/image_button_share"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/default_text" />

    <ImageButton
        android:id="@+id/image_button_share"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_share_shadow"
        app:layout_constraintBottom_toTopOf="@id/image_button_download"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ShadowImageButton" />

    <ImageButton
        android:id="@+id/image_button_download"
        android:contentDescription="@string/save"
        android:src="@drawable/ic_download_shadow"
        app:layout_constraintBottom_toTopOf="@id/image_button_wallpaper"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ShadowImageButton"/>

    <ImageButton
        android:id="@+id/image_button_wallpaper"
        android:contentDescription="@string/set_as_wallpaper"
        android:src="@drawable/ic_wallpaper_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/ShadowImageButton" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>