<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/picture_of_the_day"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_double"
        tools:text="Владимир Степанов"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_double"
        tools:text="31.01.2022"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_double"
        android:paddingEnd="64dp"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="5"
        tools:text="@string/default_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_author" />

    <ImageButton
        android:id="@+id/image_button_share"
        style="@style/ShadowImageButton"
        android:contentDescription="@string/share"
        android:src="@drawable/ic_share_shadow"
        app:layout_constraintBottom_toTopOf="@id/image_button_download"
        app:layout_constraintStart_toEndOf="parent" />

    <ImageButton
        android:id="@+id/image_button_download"
        style="@style/ShadowImageButton"
        android:contentDescription="@string/save"
        android:src="@drawable/ic_download_shadow"
        app:layout_constraintBottom_toTopOf="@id/image_button_wallpaper"
        app:layout_constraintStart_toEndOf="parent" />

    <ImageButton
        android:id="@+id/image_button_wallpaper"
        style="@style/ShadowImageButton"
        android:contentDescription="@string/set_as_wallpaper"
        android:src="@drawable/ic_wallpaper_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:padding="@dimen/default_margin"
        tools:text="Сдесь будет располагаться очень длинный текст описания. Ну прямо очень-очень длинный, чтобы занимал несколько строк. На фото видно камни и песок в кратере Даниэлсона (диаметр кратера около 67 км), расположенного на юго-востоке области Arabia Terra."
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>